<resources>
    <string name="app_name">InControl</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_so_good">Not So Good</string>
    <string name="alright">Alright</string>
    <string name="start">Start</string>
    <string name="welcome_to_your_ocd_management_app">Welcome to your OCD management app</string>
    <string name="How">How are you feeling right now?</string>
    <string name="Do_you">This will be shared with your therapist or supporter</string>
    <string name="okay">Okay</string>
    <string name="no_thanks">No thanks</string>
    <string name="You_can">You can add a note here if you want:</string>
    <string name="type_note">type note here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log">Login or Register</string>
    <string name="note_elaborate">You can add a note here if you want, eg elaborate on how you\'re feeling or whether you\'re experiencing any symptoms, etc</string>
    <string name="back">Back</string>
    <string name="data_text">Data text</string>
    <string name="alt_data_text">Data:</string>
    <string name="check">Check-in</string>
    <string name="stats">Stats</string>
    <string name="messages">Messages</string>
    <string name="mess">Messages:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="typename">Type your given username here:</string>
    <string name="typepass">Type your given password here:</string>
    <string name="home">Home</string>
    <string name="login">Login / Register</string>
</resources>