<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_9"
    tools:context=".FifthFragment">

    <TextView
        android:id="@+id/textview_fifth"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@id/button_fifth"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="220dp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        tools:text="Username:" />

    <EditText
        android:id="@+id/edittext_fifth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="0dp"
        android:hint="@string/typename"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_fifth" />

    <TextView
        android:id="@+id/textview_fifth_alt"
        android:layout_marginTop="50dp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintTop_toBottomOf="@id/edittext_fifth"
        app:layout_constraintStart_toStartOf = "@id/textview_fifth"
        tools:text="Password:" />

    <EditText
        android:id="@+id/edittext_fifth_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/typepass"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintTop_toBottomOf="@id/textview_fifth_alt"
        tools:layout_editor_absoluteX="75dp"
        app:layout_constraintStart_toStartOf = "@id/edittext_fifth"
        />

    <Button
        android:id="@+id/button_fifth"
        android:layout_marginStart = "9dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@id/textview_fifth_alt"
        app:layout_constraintTop_toBottomOf="@id/edittext_fifth_alt"
        tools:text="Login" />

    <Button
        android:id="@+id/button_fifth_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintStart_toStartOf="@id/textview_fifth"
        app:layout_constraintTop_toBottomOf="@id/button_fifth"
        tools:text="Previous" />

    <Button
        android:id="@+id/button_fifth_alt_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I am a therapist"
        app:layout_constraintStart_toStartOf="@id/edittext_fifth"
        app:layout_constraintTop_toBottomOf="@id/button_fifth_alt"
        app:layout_constraintEnd_toEndOf="@id/edittext_fifth"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="I am a therapist" />

</androidx.constraintlayout.widget.ConstraintLayout>