<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_8"
    tools:context=".EigthFragment">

    <TextView
        android:id="@+id/textview_eigth"
        android:layout_width="314dp"
        android:layout_height="100dp"
        android:text="@string/home"
        android:layout_marginTop="120dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@id/button_eigth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Home" />

    <Button
        android:id="@+id/button_eigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_eigth"
        app:layout_constraintBottom_toTopOf="@id/button_eigth_alt"
        tools:text="Check-in" />

    <Button
        android:id="@+id/button_eigth_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_eigth"
        app:layout_constraintBottom_toTopOf="@id/button_eigth_alt_alt"
        tools:text="Stats" />

    <Button
        android:id="@+id/button_eigth_alt_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_eigth_alt"
        tools:text="Messages" />

    <Button
        android:id="@+id/button_eigth_alt_alt_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "Logout"
        android:layout_marginTop="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_eigth_alt_alt"
        app:layout_constraintBaseline_toBottomOf="parent"
        tools:text="Logout" />

</androidx.constraintlayout.widget.ConstraintLayout>