<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="297dp"
        android:layout_height="90dp"
        android:text="@string/How"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="How are you feeling right now?" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintBottom_toTopOf="@id/button_second_alt"
        tools:text="Alright" />

    <Button
        android:id="@+id/button_second_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_so_good"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_second"
        app:layout_constraintBottom_toTopOf="@id/edittext_second"
        tools:text="Not So Good" />

    <EditText
        android:id="@+id/edittext_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter alternative location here"
        android:layout_marginTop="10dp"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edittext_second_alt"
        app:layout_constraintTop_toBottomOf="@id/button_second_alt"/>


    <EditText
        android:id="@+id/edittext_second_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter alternative time here"
        android:layout_marginTop="10dp"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_second"/>

</androidx.constraintlayout.widget.ConstraintLayout>